compiler/tests/fixtures/invalid/syntax/partial_construct.viv
// Invalid: Action with keyword but no body

action greet:
    roles:
